# openid

./: Cargo.toml  MIT-LICENSE  README.md  release.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  rust.yml
src/: address.rs  bearer.rs  claims.rs  client.rs  config.rs  configurable.rs  custom_claims.rs  deserializers.rs  discovered.rs  discovery.rs  display.rs  error.rs  lib.rs  options.rs  pkce.rs  prompt.rs  provider.rs  response_mode.rs  standard_claims.rs  standard_claims_subject.rs  token.rs  token_introspection.rs  uma2.rs  userinfo.rs  validation.rs
src/provider/: microsoft.rs  mod.rs
src/uma2/: claim_token_format.rs  config.rs  discovered.rs  error.rs  mod.rs  permission_association.rs  permission_ticket.rs  provider.rs  resource.rs  rpt.rs  uma2.rs
templates/: README.md
