[package]
name = "openid"
version = "0.20.1"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2021"
categories = ["authentication"]
description = """
OpenID Connect & Discovery client library using async / await.
"""
homepage = "https://github.com/kilork/openid"
keywords = ["authentication", "authorization", "oauth", "openid", "uma2"]
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/kilork/openid"
rust-version = "1.84.0"

[features]
default = ["native-tls"]
all = ["microsoft", "uma2", "native-tls", "rustls-native-certs"]
microsoft = []
uma2 = []
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
rustls-native-certs = ["reqwest/rustls-native-certs"]

[package.metadata.docs.rs]
features = ["all"]

[dependencies]
serde_json = { version = "1", default-features = false }
base64 = "0.22"
biscuit = "0.7"
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
mime = "0.3"
getrandom = { version = "0.3", default-features = false, features = ["std"] }
hmac-sha256 = "1.1.12"

[dependencies.url]
version = "2"
default-features = false
features = ["serde"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde"]

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["json"]
